gke-multi-cluster-ingress/app/hello-service-mci.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apigee-hello-app-mci
  name: apigee-hello-service-mci
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
    name: http
    nodePort: 30061
  selector:
    app: apigee-hello-app
  type: NodePort"
