gke-multi-cluster-ingress/app/hello-ingress-mci.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apigee-hello-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: global-lb-mci-ip
    kubernetes.io/ingress.class: gce-multi-cluster
spec:
  backend:
    serviceName: service-foo
    servicePort: 80
